fix z-index on tweets, add links to user, message

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  z-index: 100;
 }
 
 .App-header {
